src/scss/components/c-pre-header.scss
.c-pre-header {
  display: none;
  background: $black;

  @media screen and (min-width: $screen-l) {
    display: block;
  }

  ul {
    display: flex;
    justify-content: flex-end;
    width: 100%;
  }

  li {
    display: inline-block;
    padding: 2px 0;

    &:not(:last-of-type) {
      margin-right: 15px;
    }

    &.-active {
      border-bottom: 3px solid $white;
    }
  }

  a {
    font-size: $font-xxs;
    font-weight: 300;
    color: white;
    text-decoration: none;
  }
}

